--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@ const drinks = [
     },
     {
         id:'ماء', name:'ماء', en:'Water',
-        icon:'data:image/webp;base64,UklGRjwEAAA/'
+        icon:'https://www.google.com/imgres?q=%D8%A7%D9%8A%D9%85%D9%88%D8%AC%D9%8A%20%D8%B9%D9%84%D8%A8%D9%87%20%D9%85%D8%A7%D8%A1&imgurl=https%3A%2F%2Fcdn.salla.sa%2FQezNV%2F6TTJCIyGrAcbNv2zOPuSuqwwBSE09xPZE7rYkoKG.png&imgrefurl=https%3A%2F%2Ftoday-water.com%2Fen%2F%25D8%25AA%25D9%2588%25D8%25B5%25D9%258A%25D9%2584-%25D8%25A7%25D9%2584%25D9%2585%25D8%25B3%25D8%25A7%25D8%25AC%25D8%25AF%2Fp1176529022%3Fsrsltid%3DAfmBOopAaol_V7WgEmlJguXOK9cIdDvwg0s_ePIlz4ZGvEu6sWudu533&docid=cDJ74P5TAfX1dM&tbnid=p0HEWBj5LPpWGM&vet=12ahUKEwiFwuCvo6ORAxW7U0EAHd_rAa8QM3oECF4QAA..i&w=1000&h=855&hcb=2&ved=2ahUKEwiFwuCvo6ORAxW7U0EAHd_rAa8QM3oECF4QAA'
     },
     {
         id:'تمر', name:'تمر', en:'Dates',
-        icon:'data:image/webp;base64,UklGRs4XAAB/'
+        icon:'https://www.google.com/imgres?q=%D8%A7%D9%8A%D9%85%D9%88%D8%AC%D9%8A%20%D8%AA%D9%85%D8%B1&imgurl=https%3A%2F%2Fpng.pngtree.com%2Fpng-vector%2F20230918%2Fourmid%2Fpngtree-dates-fruit-kurma-fruit-png-image_10130982.png&imgrefurl=https%3A%2F%2Far.pngtree.com%2Fso%2F%25D8%25A7%25D9%2584%25D8%25AA%25D9%2585%25D8%25B1&docid=vJaLN6yBSDzSHM&tbnid=TovbZtneXUYQdM&vet=12ahUKEwi_3YDRo6ORAxVsVUEAHYIPAu8QM3oECBoQAA..i&w=360&h=360&hcb=2&ved=2ahUKEwi_3YDRo6ORAxVsVUEAHYIPAu8QM3oECBoQAA'
     },
     {
         id:'شاي_عمق', name:'شاي عُمق', en:'Iced Tea',
-        icon:'https://umqcoffee.com/cdn/shop/files/iced_tea.png'
+        icon:'https://www.google.com/imgres?q=%D8%B4%D8%A7%D9%8A%20%D8%B9%D9%85%D9%82&imgurl=https%3A%2F%2Fcdn.salla.sa%2FxveDw%2FjUrsm24RyqUbbi6kZZsFlodg8U3SLywYDb3TeacZ.jpg&imgrefurl=https%3A%2F%2Fumqcoffee.com%2Far%2FERDdpQ%3Fsrsltid%3DAfmBOorqhqXQitxl9nvwMJ19TNfnZR9KJ-fJJaExqFYmzNkfSVVEmdbw&docid=NOIL8ibPVDdM6M&tbnid=GBgNGZmBu5Q2FM&vet=12ahUKEwjD_Y3fo6ORAxUJXEEAHVoOCfwQM3oECC8QAA..i&w=1000&h=1000&hcb=2&ved=2ahUKEwjD_Y3fo6ORAxUJXEEAHVoOCfwQM3oECC8QAA'
     },
     {
         id:'شاي_اخضر', name:'شاي أخضر', en:'Green Tea',
@@ -153,15 +153,15 @@ const drinks = [
     },
     {
         id:'دونات', name:'دونات', en:'Donut',
-        icon:'https://oliesgift.com/cdn/shop/files/tasty-donuts-sweet-food-enamel-pin.jpg'
+        icon:'https://www.google.com/imgres?q=%D8%A7%D9%8A%D9%85%D9%88%D8%AC%D9%8A%20%D8%AF%D9%88%D9%86%D8%A7%D8%AA&imgurl=http%3A%2F%2Foliesgift.com%2Fcdn%2Fshop%2Ffiles%2Ftasty-donuts-sweet-food-enamel-pin-by-realsic-wide.jpg%3Fv%3D1697553353&imgrefurl=https%3A%2F%2Foliesgift.com%2Fproducts%2Fdelicious-cute-donut-emoji-enamel-lapel-pin-for-your-life%3Fsrsltid%3DAfmBOoq7SWdDzj-RMAE6DOvtOmIV75rrDhnRydLS9Iobz5bBoQaAT25e&docid=KNAzsBL4soS6HM&tbnid=xfSUQZgDTSqFnM&vet=12ahUKEwiawoPuo6ORAxUgX0EAHZ26L8wQM3oECBwQAA..i&w=1830&h=1830&hcb=2&ved=2ahUKEwiawoPuo6ORAxUgX0EAHZ26L8wQM3oECBwQAA'
     },
     {
         id:'معجنات', name:'معجنات', en:'Pastries',
-        icon:'https://www.pngegg.com/pngimage/1030014.png'
+        icon:'https://www.google.com/imgres?q=%D8%A7%D9%8A%D9%85%D9%88%D8%AC%D9%8A%20%D9%85%D8%B9%D8%AC%D9%86%D8%A7%D8%AA&imgurl=https%3A%2F%2Fe7.pngegg.com%2Fpngimages%2F944%2F814%2Fpng-clipart-danish-pastry-pan-dulce-panettone-flavor-bread-bread-food-sweetness.png&imgrefurl=https%3A%2F%2Fwww.pngegg.com%2Far%2Fpng-swrou&docid=FMWgwMjMsrLPeM&tbnid=5Gl8ng6UR1PQMM&vet=12ahUKEwj46Ov8o6ORAxVjdUEAHVHjFmYQM3oECCsQAA..i&w=900&h=800&hcb=2&ved=2ahUKEwj46Ov8o6ORAxVjdUEAHVHjFmYQM3oECCsQAA'
     },
     {
         id:'عريكة_فهد', name:'عريكة فهد', en:'Areeka',
-        icon:'https://img-global.cpcdn.com/recipes/071ec3b23d08d5bb/680x781.jpg'
+        icon:'https://www.google.com/imgres?q=%D8%A7%D9%8A%D9%85%D9%88%D8%AC%D9%8A%20%D8%B9%D8%B1%D9%8A%D9%83%D9%87&imgurl=https%3A%2F%2Fimg-global.cpcdn.com%2Frecipes%2F071ec3b23d08d5bb%2F680x781f0.5_0.501343_1.0q80%2F%25D8%25A7%25D9%2584%25D8%25B5%25D9%2588%25D8%25B1%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25B1%25D8%25A6%25D9%258A%25D8%25B3%25D9%258A%25D8%25A9-%25D9%2584%25D9%2588%25D8%25B5%25D9%2581%25D8%25A9%25D8%25B9%25D8%25B1%25D9%258A%25D9%2583%25D8%25A9-%25D8%25AC%25D9%2586%25D9%2588%25D8%25A8%25D9%258A%25D8%25A9.jpg&imgrefurl=https%3A%2F%2Fcookpad.com%2Fsa%2F%25D9%2588%25D8%25B5%25D9%2581%25D8%25A7%25D8%25AA%2F17258710&docid=9Wbdli6REAcXZM&tbnid=rUTJCb1hjkRWaM&vet=12ahUKEwjRgNyLpKORAxVpT0EAHRpnCboQM3oECBkQAA..i&w=680&h=781&hcb=2&ved=2ahUKEwjRgNyLpKORAxVpT0EAHRpnCboQM3oECBkQAA'
     }
 ];
 
@@ -285,6 +285,7 @@ document.getElementById('clearBtn').addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
 
 
 
