--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ const drinks = [
     },
     {
         id:'ماء', name:'ماء', en:'Water',
-        icon:'https://www.google.com/imgres?q=%D8%A7%D9%8A%D9%85%D9%88%D8%AC%D9%8A%20%D8%B9%D9%84%D8%A8%D9%87%20%D9%85%D8%A7%D8%A1&imgurl=https%3A%2F%2Fcdn.salla.sa%2FQezNV%2F6TTJCIyGrAcbNv2zOPuSuqwwBSE09xPZE7rYkoKG.png&imgrefurl=https%3A%2F%2Ftoday-water.com%2Fen%2F%25D8%25AA%25D9%2588%25D8%25B5%25D9%258A%25D9%2584-%25D8%25A7%25D9%2584%25D9%2585%25D8%25B3%25D8%25A7%25D8%25AC%25D8%25AF%2Fp1176529022%3Fsrsltid%3DAfmBOopAaol_V7WgEmlJguXOK9cIdDvwg0s_ePIlz4ZGvEu6sWudu533&docid=cDJ74P5TAfX1dM&tbnid=p0HEWBj5LPpWGM&vet=12ahUKEwiFwuCvo6ORAxW7U0EAHd_rAa8QM3oECF4QAA..i&w=1000&h=855&hcb=2&ved=2ahUKEwiFwuCvo6ORAxW7U0EAHd_rAa8QM3oECF4QAA'
+        icon:'https://www.google.com/url?sa=i&url=https%3A%2F%2Far.pngtree.com%2Ffree-png-vectors%2F%25D9%2582%25D8%25A7%25D8%25B1%25D9%2588%25D8%25B1%25D8%25A9-%25D9%2585%25D8%25A7%25D8%25A1&psig=AOvVaw1r1HuzJcPJCB5_sULkkpDL&ust=1764915467957000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCOi9-M-ko5EDFQAAAAAdAAAAABAE'
     },
     {
         id:'تمر', name:'تمر', en:'Dates',
@@ -285,6 +285,7 @@ document.getElementById('clearBtn').addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
 
 
 
